fix overflowX

--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -2,6 +2,7 @@
     background-color: var(--alice-blue);
     padding-bottom: 100px;
     padding-top: 70px;
+    overflow-x: hidden;
 }
 
 .main hr {
@@ -22,7 +23,6 @@
     font-size: 360px;
     color: white;
     margin: 0 5rem;
-    /* overflow-x: hidden; */
 }
 
 .title .desc{
